@@ -532,6 +532,10 @@ globus_i_gsc_op_destroy(
         {
             globus_free(op->path);
         }
+        if(op->absolute_path != NULL)
+        {
+            globus_free(op->absolute_path);
+        }
         if(op->glob_match_str != NULL)
         {
             globus_free(op->glob_match_str);
@@ -3019,7 +3023,7 @@ globus_gridftp_server_control_start(
         globus_free(server_handle->types);
     }
     /* default options */
-    strcpy(server_handle->opts.mlsx_fact_str, "TMSPUOIGDQLN");
+    strcpy(server_handle->opts.mlsx_fact_str, "TMSPUOIGDQLAN");
     server_handle->opts.send_buf = 0; 
     server_handle->opts.perf_frequency = 5;
     server_handle->opts.retr_perf_frequency = 0;
@@ -3959,6 +3963,7 @@ globus_i_gsc_mlsx_line_single(
     int                                 uid,
     globus_gridftp_server_control_stat_t *  stat_info,
     const char *                        base_path,
+    const char *                        absolute_path,
     globus_bool_t                       mlst)
 {
     char *                              out_buf;
@@ -4211,6 +4216,25 @@ globus_i_gsc_mlsx_line_single(
                 }
                 break;
 
+            case GLOBUS_GSC_MLSX_FACT_XABSPATH:
+                if(is_cdir && absolute_path)
+                {
+                    const char *        slash = "/";
+                    
+                    enc_str = NULL;
+                    if(absolute_path[strlen(absolute_path) - 1] == '/')
+                    {
+                        slash = "";
+                    }
+                    cnt = globus_l_gsc_mlsx_urlencode(absolute_path, &enc_str);
+                    sprintf(tmp_ptr, "X.abspath=%s%s;", enc_str, slash);
+                    if(cnt)
+                    {
+                        globus_free(enc_str);
+                    }
+                }
+                break;
+
             case GLOBUS_GSC_MLSX_FACT_XCOUNT:
                 if(is_cdir)
                 {
@@ -4267,6 +4291,7 @@ globus_i_gsc_mlsx_line(
     const char *                        mlsx_fact_str,
     uid_t                               uid,
     const char *                        base_path,
+    const char *                        absolute_path,    
     globus_bool_t                       indent)
 {
     char *                              line;
@@ -4292,6 +4317,7 @@ globus_i_gsc_mlsx_line(
                 uid,
                 &stat_info[ctr],
                 base_path,
+                absolute_path,
                 GLOBUS_FALSE);
         if(line != NULL)
         {
@@ -5212,6 +5238,7 @@ globus_l_gsc_internal_cb_kickout(
                 op->response_type,
                 op->response_msg,
                 op->path,
+                op->absolute_path,
                 op->stat_info,
                 op->stat_count,
                 op->uid,
@@ -5763,6 +5790,26 @@ globus_gridftp_server_control_finished_transfer(
 }
 
 globus_result_t
+globus_gridftp_server_control_set_paths(
+    globus_gridftp_server_control_op_t      op,
+    const char *                            absolute_path,
+    const char *                            resolved_path)
+{
+    GlobusGridFTPServerName(globus_gridftp_server_control_set_paths);
+    GlobusGridFTPServerDebugEnter();
+
+    if (absolute_path)
+    {
+        free(op->absolute_path);
+        op->absolute_path = strdup(absolute_path);
+    }
+    /* resolved_path ignored */
+    
+    GlobusGridFTPServerDebugExit();
+    return GLOBUS_SUCCESS;
+}
+
+globus_result_t
 globus_gridftp_server_control_list_buffer_alloc(
     const char *                                fact_str,
     uid_t                                       uid,
@@ -5819,7 +5866,7 @@ globus_gridftp_server_control_list_buffer_alloc(
     else
     {
         *out_buf = (globus_byte_t *) globus_i_gsc_mlsx_line(
-            stat_info_array, stat_count, fact_str, uid, base_path, GLOBUS_FALSE);
+            stat_info_array, stat_count, fact_str, uid, base_path, NULL, GLOBUS_FALSE);
     }
 
     *out_size = strlen((char *) *out_buf);
